# rude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md  install-rude.sh  rp.json
.claude/: settings.json
.claude/agents/: go-extractor.md  output-fixer.md  tsc-extractor.md
.rude.db/: config.json  store.db
crates/rude/: Cargo.toml
crates/rude-db/: Cargo.toml
crates/rude-db/src/: db.rs  db_config.rs  file_index.rs  file_utils.rs  interrupt.rs  lib.rs  payload.rs  payload_store.rs
crates/rude-intel/: Cargo.toml  build.rs
crates/rude-intel/src/: bfs.rs  chunk_types.rs  clones.rs  context.rs  context_cmd.rs  dupe_analyze.rs  edge_resolve.rs  graph.rs  helpers.rs  impact.rs  index_tables.rs  jump.rs  lib.rs  loader.rs  mir_edges.rs  parse.rs  reason.rs  stats.rs  trace.rs
crates/rude-intel/src/analysis/: clones.rs  dupe_analyze.rs  helpers.rs  loader.rs  mod.rs  stats.rs
crates/rude-intel/src/data/: chunk_types.rs  minhash.rs  mod.rs  parse.rs
crates/rude-intel/src/graph/: bfs.rs  build.rs  context.rs  context_cmd.rs  edge_resolve.rs  impact.rs  index_tables.rs  jump.rs  mod.rs  trace.rs
crates/rude-intel/src/mir_edges/: mod.rs  polyglot.rs  runner.rs  sqlite.rs  types.rs  workspace.rs
crates/rude-intel/src/tests/: clones.rs  concurrency.rs  context_cmd.rs  dupe_analyze.rs  graph.rs  helpers.rs  mod.rs  stats.rs
crates/rude-util/: Cargo.toml
crates/rude/src/: cli.rs  config.rs  lib.rs  main.rs
crates/rude/src/commands/: add.rs  cluster.rs  dupes.rs  edit.rs  ingest.rs  mod.rs  split.rs  watch.rs
crates/rude/src/commands/add/: ingest.rs  mod.rs  run.rs
crates/rude/src/commands/add/ingest/: mir.rs  mod.rs  polyglot.rs  writer.rs
crates/rude/src/commands/add/run/: mir.rs  mir_tests.rs  mod.rs  pipeline.rs  scan.rs
crates/rude/src/commands/dupes/: analyze.rs  mod.rs  output.rs  run.rs  types.rs
crates/rude/src/commands/edit/: file.rs  file_ops.rs  imports.rs  line_cmds.rs  locate.rs  mod.rs  ops.rs  path.rs  split.rs
crates/rude/src/commands/edit/split/: common.rs  mod.rs  module.rs  single.rs
crates/rude/src/commands/intel/: cluster.rs  commands.rs  coverage.rs  dead.rs  mod.rs  query.rs
crates/rude/src/commands/intel/query/: blast.rs  common.rs  context.rs  mod.rs  stats.rs  symbols.rs  trace.rs
crates/rude/src/commands/intel/tests/: context.rs  graph.rs  helpers.rs  impact.rs  mod.rs  parse.rs  trace.rs
crates/rude/src/commands/tests/: ingest.rs
crates/rude/src/commands/watch/: handler.rs  mod.rs  watcher.rs
crates/rude/tests/: mir_recovery.rs
docs/: daemon-mode-plan.md  daemon-optimization-issues.md  edit-pipeline-plan.md  edit-remaining-tasks.md  mir-capture-gaps.md  perf-dll-prefetch-plan.md  plan-dyn-trait-resolve.md  plan-rustc-public-migration.md  remaining-tasks.md  rustc-public-api-limits.md
tools/go-callgraph/: go.mod  main.go
tools/mir-callgraph/: .gitignore  Cargo.toml
tools/mir-callgraph/src/: cli.rs  compat.rs  daemon.rs  direct.rs  extract.rs  main.rs  output.rs  types.rs  wrapper.rs
tools/ts-callgraph/: package.json  tsconfig.json
(+12 files in other folders)
