[package]
name = "rude-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
fs2 = "0.4"
ctrlc = "3"
md-5 = "0.10"
walkdir = "2"
