[package]
name = "rude-intel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rude_intel"

[dependencies]
rude-db = { path = "../rude-db" }
anyhow = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
rayon = "1"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
fs2 = "0.4"
tempfile = "3"
