[package]
name = "rude"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rude"
path = "src/main.rs"

[lib]
name = "rude_cli"
path = "src/lib.rs"

[dependencies]
rude-intel = { path = "../rude-intel" }
rude-db = { path = "../rude-db" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
rayon = "1"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-chrome = "0.7"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
