[package]
name = "mir-callgraph"
version = "0.1.0"
edition = "2024"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry"] }
